--- a/privacy policy/index.html
+++ b/privacy policy/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <h1>ロック画メモ プライバシーポリシー</h1>
-    <h2>お客様のメモの取り扱いについて</h2>
-    <p>・お客様のメモは、端末内に保存されますが、メモを書き換えたら上書きされ、古いデータは破棄されます。</p>
-    <p>・お客様のメモは、端末内のみに保存されます。ロック画メモは、決してお客様のメモを外部に送信しません。</p>
+    <h2>広告について</h2>
+    <p>本アプリでは、広告配信ツールとしてAdMob(Google Inc.)を使用しており、AdMobがご利用者の情報を自動取得する場合がございます。取得する情報、利用目的、第三者への提供等につきましては、以下の広告配信事業者のアプリケーション・プライバシーポリシーのリンクよりご確認ください。</p>
+    <a herf='https://policies.google.com/technologies/ads?hl=ja'>https://policies.google.com/technologies/ads?hl=ja</a>
 </body>
 
 </html>
