--- a/privacy policy/index.html
+++ b/privacy policy/index.html
@@ -17,7 +17,7 @@
     <h2>利用状況解析ついて</h2>
     <p>本アプリでは、今後の開発の参考とするため、アプリの利用状況データを収集するツールとしてFirebase(Google Inc.)を使用しており、Firebaseがご利用者の情報を自動取得する場合がございます。取得する情報、利用目的、第三者への提供等につきましては、以下のGoogleプライバシーポリシーのリンクよりご確認ください。</p>
     <a herf="https://policies.google.com/privacy?hl=ja">https://policies.google.com/privacy?hl=ja</a>
-    <p>プライバシーポリシーの変更について</p>
+    <h2>プライバシーポリシーの変更について</h2>
     <p>このプライバシーポリシーは随時変更される可能性があるため、随時確認してください。</p>
 </body>
 
