--- a/privacy policy/index.html
+++ b/privacy policy/index.html
@@ -13,6 +13,7 @@
     <h1>ロック画メモ プライバシーポリシー</h1>
     <h2>広告について</h2>
     <p>本アプリでは、広告配信ツールとしてAdMob(Google Inc.)を使用しており、AdMobがご利用者の情報を自動取得する場合がございます。取得する情報、利用目的、第三者への提供等につきましては、以下の広告配信事業者のアプリケーション・プライバシーポリシーのリンクよりご確認ください。</p>
+    <p>Google 広告に関するポリシー</p>
     <a href="https://policies.google.com/technologies/ads?hl=ja" target="_blank">https://policies.google.com/technologies/ads?hl=ja</a>
     <h2>利用状況解析ついて</h2>
     <p>本アプリでは、今後の開発の参考とするため、アプリの利用状況データを収集するツールとしてFirebase(Google Inc.)を使用しており、Firebaseがご利用者の情報を自動取得する場合がございます。取得する情報、利用目的、第三者への提供等につきましては、以下のGoogleプライバシーポリシーのリンクよりご確認ください。</p>
